configuring logging for docker
Reviewed-by: jason.kroll

--- a/cetera.conf.j2
+++ b/cetera.conf.j2
@@ -13,6 +13,16 @@ com.socrata {
   }
 
   log4j {
+    rootLogger = [ INFO, stdout ]
+    appender {
+      stdout.class = org.apache.log4j.ConsoleAppender
+      stdout.props {
+        layout.class = org.apache.log4j.PatternLayout
+        layout.props {
+          ConversionPattern = "[%t] [%X{requestId}] %p %c{1} %d %m%n"
+        }
+      }
+    }
   }
 
   elasticsearch {
