Wire up function score scripts from Cetera app configs

--- a/cetera.conf.j2
+++ b/cetera.conf.j2
@@ -31,5 +31,6 @@ com.socrata {
     es-cluster-name = {{ ES_CLUSTER_NAME }}
     min-should-match = {{ MIN_SHOULD_MATCH }}
     title-boost = {{ TITLE_BOOST }}
+    function-score-scripts = {{ FUNCTION_SCORE_SCRIPTS }}
   }
 }
