EN-2367 Add balboa client for keeping metrics on search terms

--- a/cetera.conf.j2
+++ b/cetera.conf.j2
@@ -25,6 +25,10 @@ com.socrata {
     }
   }
 
+  balboa {
+    data-directory = {{ BALBOA_METRICS_DIRECTORY }}
+  }
+
   elasticsearch {
     es-server = {{ ES_SERVER }}
     es-port = {{ ES_PORT }}
