EN-2764: Organize docker files and use default METRICS_DIR variable.
Reviewed-by: jason.kroll

--- a/docker/cetera.conf.j2
+++ b/docker/cetera.conf.j2
@@ -26,7 +26,7 @@ com.socrata {
   }
 
   balboa {
-    data-directory = {{ BALBOA_METRICS_DIRECTORY }}
+    data-directory = {{ METRICS_DIR }}
   }
 
   elasticsearch {
