Add airbrake dependency and params for docker conf
reviewed-by:robert.voyer@socrata.com,jason.kroll@socrata.com

--- a/cetera-http/docker/cetera.conf.j2
+++ b/cetera-http/docker/cetera.conf.j2
@@ -13,8 +13,14 @@ com.socrata {
   }
 
   log4j {
-    rootLogger = [ INFO, stdout ]
+    rootLogger = {{ LOG_PATHS }}
     appender {
+      airbrake.class = airbrake.AirbrakeAppender
+      airbrake.props {
+        api_key = {{ AIRBRAKE_API_KEY }}
+        env = {{ AIRBRAKE_ENVIRONMENT }}
+        enabled = {{ AIRBRAKE_ENABLED }}
+      }
       stdout.class = org.apache.log4j.ConsoleAppender
       stdout.props {
         layout.class = org.apache.log4j.PatternLayout
