Add coreClient to DomainClient
This is to enable looking up user info so that we can optionally
hide locked domains.

Reviewed-by: jason.kroll,robert.voyer,john.krah

--- a/cetera-http/docker/cetera.conf.j2
+++ b/cetera-http/docker/cetera.conf.j2
@@ -35,6 +35,12 @@ com.socrata {
     data-directory = {{ METRICS_DIR }}
   }
 
+  core {
+    host = {{ CORE_HOST }}
+    port = {{ CORE_PORT }}
+    {{ CORE_APP_TOKEN_LINE }}
+  }
+
   elasticsearch {
     es-server = {{ ES_SERVER }}
     es-port = {{ ES_PORT }}
